--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-intersection-observer": "^9.14.1",
     "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.6.0",
-    "three": "^0.172.0",
-    "typewriter-effect": "^2.21.0"
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
